<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bground"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >
        
        <TextView
	        android:id="@+id/plssupply"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/button_mTop"
	        android:text="@string/plssupply"
	        android:textSize="@dimen/form_textSize"        
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
	        android:id="@+id/username"
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/form_height"
	        android:hint="@string/username"
	        android:inputType="textPersonName"
	        android:textSize="@dimen/form_textSize"
	        android:background="@drawable/white_button" >
	     <requestFocus />
	    </EditText>
        
        <EditText
	        android:id="@+id/eadd"
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/form_height"
	        android:textSize="@dimen/form_textSize"
	        android:hint="@string/eadd"
	        android:layout_marginTop="@dimen/form_mTop"  
	        android:inputType="textEmailAddress" 
	        android:background="@drawable/white_button">
	    </EditText>
    
     <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/form_height"
        android:textSize="@dimen/form_textSize"
        android:layout_marginTop="@dimen/button_mTop"
        android:text="@string/submit"
        android:background="@drawable/green_button"
        android:textColor="@color/white" />
    
    <Button
        android:id="@+id/rtologin"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/form_height"
        android:textSize="@dimen/form_textSize"
        android:layout_marginTop="@dimen/form_mTop"       
        android:text="@string/rtologin"
        android:background="@drawable/gray_button" 
        android:textColor="@color/white"/>
      
    </LinearLayout>
     
</RelativeLayout>