<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bground" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@color/green" >
            
            <ImageView
	            android:id="@+id/profpic"
	            android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:maxWidth="50dp"
        		android:maxHeight="50dp"
        		android:scaleType="centerCrop"
	            android:layout_gravity="center"            
	            android:background="@drawable/pacman"
	            android:adjustViewBounds="true" />
            
            <LinearLayout
		        android:id="@+id/nameOfUser"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:background="#AA111111"
		        android:orientation="vertical"
		        android:gravity="center" >

		        <TextView
		            android:id="@+id/firstName"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/sampleFirstName"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="@color/white"
		            android:textStyle="bold" />
		
		        <TextView
		            android:id="@+id/lastName"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/sampleLastName"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="@color/white"
		            android:textStyle="bold" />                
    		</LinearLayout>
        </LinearLayout>

    
    
    <LinearLayout
        android:id="@+id/userContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="vertical" >
        
        <LinearLayout
	        android:id="@+id/usernameInfo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bottom_border"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"	        
	        android:orientation="vertical"
	        android:gravity="center" >
	        
            <TextView
	            android:id="@+id/sampleUsername"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sampleUsername"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/black"
	            android:textStyle="bold" />
            
            <TextView
	            android:id="@+id/uname"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/small_username"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="@color/black" />
     	</LinearLayout>
     	
        <LinearLayout
	        android:id="@+id/eaddInfo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bottom_border"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"	        
	        android:orientation="vertical"
	        android:gravity="center" >
	        
            <TextView
	            android:id="@+id/sampleEmail"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sampleEmail"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/black"
	            android:textStyle="bold" />
            
            <TextView
	            android:id="@+id/small_eadd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/small_eadd"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="@color/black" />
     	</LinearLayout>
     	
        <LinearLayout
	        android:id="@+id/contactInfo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bottom_border"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"	        
	        android:orientation="vertical"
	        android:gravity="center" >
	        
            <TextView
                android:id="@+id/sampleNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/sampleContactNum"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />
            
            <TextView
	            android:id="@+id/contactNumber"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/small_contactnum"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="@color/black" />
     	</LinearLayout>
   
     </LinearLayout>
   </LinearLayout>
</ScrollView>